new hero & index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,14 +1,7 @@
 <div>
   <article>
     <div class="mb-4">
-      <%= image_tag "about_book.jpg", class: "img-fluid rounded w-100", loading: "lazy" %>
-    </div>
-
-    <h1 class="mb-3 h2">Tecnología, atención y la mente digital.</h1> 
-    <div class="px-md-4 mb-5"> <p>En un mundo saturado de estímulos y trampas mentales, este blog propone otra cosa: pensar con atención plena.
-Sin filtros, sin promesas vacías. Solo ideas que invitan a cuestionar lo que damos por hecho.
-    <br><br>
-    Este es un espacio para detenerse, observar y reconectar con nuestra naturaleza pensante.</p>
+      <%= image_tag "hero_new_welcome.jpg", class: "img-fluid rounded w-100", loading: "lazy" %>
     </div>
 
     <h2 class="mb-4">Últimos artículos</h2>
